# wirable

./: .env.example  .gitignore  CONTRACTS.md  README.md  docker-compose.yml  setup.ps1  setup.sh
.next/: trace
backend/: Dockerfile  alembic.ini  collaboration.py  llm_proxy.py  mailbox_sender.py  public.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_autonomous.py
backend/scripts/: build_snapshot.py  diag_frames.py  seed_registry.py
backend/src/: main.py
backend/src/agents/: catts.py  pr_agent.py
backend/src/api/v1/: router.py
backend/src/api/v1/endpoints/: access.py  audit.py  auth.py  dashboard.py  discovery.py  fix.py  github.py  onboarding.py  outbound.py  proxy.py  report.py  run.py  track.py
backend/src/core/: auth.py  config.py  contracts.py  database.py  ratelimit.py
backend/src/core/llm/: __init__.py  anthropic_client.py  key_pool.py
backend/src/core/sandbox/: __init__.py  daytona_client.py
backend/src/harness/: audit_driver.py  code_driver.py  fix_driver.py  skills.py
backend/src/models/: __init__.py  audit.py  base.py  client.py  company.py  mcp.py  outbound.py  user.py
backend/src/services/: audit_service.py  code_analysis.py  discovery_service.py  email.py  enrichment_service.py  entitlements.py  fix_service.py  github_fix.py  github_harness_fix.py  github_service.py  mcp_monitor.py  orchestrator.py  outbound_service.py  proxy_generator.py  proxy_runtime.py  recon.py  score_service.py  scout.py  test_service.py  turnstile.py  verification_service.py
harness/: Dockerfile  README.md
(+96 files in other folders)
