[project]
name = "agentready-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "PyGithub>=2.3",
    "python-dotenv>=1.0",
    "cryptography>=42",
    "loguru>=0.7",
    "daytona==0.179.0",
    "daytona-api-client==0.179.0",
    "daytona-api-client-async==0.179.0",
]

[tool.uv]
dev-dependencies = ["pytest", "pytest-asyncio", "httpx"]
